--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-
-
-<h1>hola</h1>
-<p> Prueba  Prueba  Prueba</p>
-<p> Prueba  Prueba  </p>
-<p> Prueba  </p>
-<p>HOLA HOLAAAAAAAAAAAAAA</p>
+<button class="btn btn-lg btn-primary">Foro</button>
