--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-/*Style de Bootswatch - Materia (tutorial de yt)*/
+/*Style de Bootswatch - Materia (tutorial de yt)
 
 body {
     padding-top: 120px;
-    /*background-image: url("C:\Users\Oscar\Documents\GitHub\foromultimedia\src\img\FONDO.jpeg");
-    background-repeat: no-repeat;*/
     background-color: #59A7A9
 }
 pre {
@@ -250,3 +248,4 @@ iframe {
         text-align: center
     }
 }
+*/
