--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,18 +5,18 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="text-center">Registro</h1>
-                <form>
-
+                <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
+                    
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control">
+                        <input type="email" class="form-control" formControlName="email">
                     </div>
 
                     <div class="form-group">
                         <label for="email">Constraseña</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" formControlName="password">
                     </div>
-                    <button class="btn btn-primary btn-lg btn-block">Registro</button>
+                    <button type= "submit" class="btn btn-primary btn-lg btn-block">Registro</button>
                 </form>
 
                 <div class="form-group mt-3">
