--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,22 +5,22 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="text-center">Login</h1>
-                <form>
+                <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
 
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control">
+                        <input type="email" class="form-control" formControlName="email">
                     </div>
 
                     <div class="form-group">
                         <label for="email">Constraseña</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" formControlName="password">
                     </div>
-                    <button class="btn btn-primary btn-lg btn-block">Login</button>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
                 </form>
 
                 <div class="form-group mt-3">
-                    <p> ¿No tienes cuenta? <a [routerLink]="['/register']"> Registro</a></p>
+                    <p> ¿No tienes cuenta? <a [routerLink]="['/register']">Registro</a></p>
                 </div>
 
             </div>
