--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,8 +19,16 @@
                     <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
                 </form>
 
-                <div class="form-group mt-3">
-                    <p> ¿No tienes cuenta? <a [routerLink]="['/register']">Registro</a></p>
+                <div class="row col-12 d-flex justify-content-center">
+                    <div class="form-group mt-3 col-12">
+                        <button (click)="onGoogleLogin()" class="btn btn-lg btn-block">LOGIN CON GOOGLE</button>
+                    </div>
+                </div>
+
+                <div class="row col-12 d-flex justify-content-center">
+                    <div class=" mt-3">
+                        <p> ¿No tienes cuenta? <a [routerLink]="['/register']">Registro</a></p>
+                    </div> 
                 </div>
 
             </div>
