--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,28 +5,42 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="text-center">Registro</h1>
-                <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
+                <form  (ngSubmit)="onRegister(); onRegisNuevo()" [formGroup]="registerForm">
                     
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" formControlName="email">
+                        <input  class="form-control" formControlName="email">
                     </div>
 
                     <div class="form-group">
-                        <label for="email">Constraseña</label>
-                        <input type="password" class="form-control" formControlName="password">
+                        <label for="name">Nombre</label>
+                        <input type="text" class="form-control" formControlName="name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="apellido">Apellido</label>
+                        <input type="text" class="form-control" formControlName="apellido">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="nombreusuario">Nombre de Usuario</label>
+                        <input type="text" class= "form-control" formControlName="nombreusuario">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Constraseña</label>
+                        <input class="form-control" formControlName="password">
                     </div>
                 
-                    <button type= "submit" class="btn btn-primary btn-lg btn-block">Registro</button>
+                    <button  type= "submit" class="btn btn-primary btn-lg btn-block" >Registro</button>
                 </form>
 
                 <div class="form-group mt-3">
                     <p> ¿Ya tiene cuenta? <a [routerLink]="['/login']"> Login</a></p>
                 </div>
-
-
-
             </div>
+
+    
         </div>
     </div>
 </div>
