--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<h1>HELLO Homepage</h1>
+
+<button  [routerLink]="['/menu']" > click </button>
+
+
+<img width="250" src="/wp-content/uploads/2012/12/jquery.jpg" class="target">
+
+<input type="button" id="mostrar" name="boton1" value="Click para mostrar elementos">
+<input type="button" id="ocultar" name="boton2" value="Click pora ocultar elementos">
