--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+
+    <app-menu> </app-menu>
     <a class="navbar-brand" href="\">Foro Multimedia</a>
-    
-  
+
+
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -13,11 +15,11 @@
         <li class="nav-item " *ngIf = "!user">
           <a class="nav-link" routerLink="/login">Login</a>
        </li>
-      
+
         <li class="nav-item " *ngIf = "user">
           <a href="#" class="nav-link" (click)="onLogout()">Logout</a>
        </li>
-    
+
         <li class="nav-item " *ngIf = "!user">
           <a class="nav-link" routerLink="/register">Register</a>
        </li>
