--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,7 +5,7 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="text-center">Registro</h1>
-                <form  (ngSubmit)="onRegister(); onRegisNuevo()" [formGroup]="registerForm">
+                <form  (ngSubmit)="onRegisNuevo()" [formGroup]="registerForm">
                     
                     <div class="form-group">
                         <label for="email">Email</label>
