--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,18 +7,18 @@
     outline: none;
 }
 header .wrapper{
-    width: 800px; 
+    width: 10%; 
     height: 350px;
     margin: 0 auto;
     display: flex; 
     flex-direction: row; 
     justify-content: space-between;
-    margin-left: 100px;
+    margin-left: 20px;
     margin-right: 100px;
-    margin-top: 120px;
+    margin-top: 35px;
 }
 header .hed{
-    width: 2200px; 
+    width: 140%; 
     height: 350px;
     margin: 0 auto;
     display: flex; 
@@ -36,7 +36,7 @@ footer .mesa .hed1{
     flex-direction: row; 
     justify-content: center;
     margin-top: 60px;
-    margin-left: 250px;
+    margin-left: -50px;
 }
 footer .mesa .hed2{
     height: 280px;
@@ -46,7 +46,7 @@ footer .mesa .hed2{
     flex-direction: row; 
     justify-content: center;
     margin-top: -250px;
-    margin-left: 540px;
+    margin-left: 250px;
 }
 footer .mesa .hed3{
     height: 280px;
@@ -56,7 +56,7 @@ footer .mesa .hed3{
     flex-direction: row; 
     justify-content: center;
     margin-top: -320px;
-    margin-left: 850px;
+    margin-left: 570px;
 }
 footer .mesa .hed4{
     height: 250px;
@@ -66,5 +66,5 @@ footer .mesa .hed4{
     flex-direction: row; 
     justify-content: center;
     margin-top: -240px;
-    margin-left: 1150px;
+    margin-left: 890px;
 }
