--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ body{
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 1440px;
+  font-size: 80%;
 }
 
 html, body { height: 100%; }
@@ -12,3 +13,25 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@media screen and (max-width:820px){
+  .body{
+    grid-template-columns: 1fr 1fr;
+  }
+  .body{
+    padding: 10px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .body{
+    width: 30px;
+    margin-right: 10px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width:500px){
+  .body{
+    grid-template-columns: 1fr;
+  }
+}
