--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
       <img id="logo2d" src="../../assets/2D.png">  
     </div>
     <div class="hed">
-      <img [src]="imgsrc" (mouseover)="imgsrc = '../../assets/3D.gif'" (mouseout)="imgsrc = '../../assets/3D.png'">  
+      <img id="logo3d" [src]="imgsrc" (mouseover)="imgsrc = '../../assets/3D.gif'" (mouseout)="imgsrc = '../../assets/3D.png'">  
     </div>
   </header>
   <footer>
@@ -22,39 +22,4 @@
         </div>
        </div>
     </footer>
-    <script>
-      $(document).ready(function(){
-      $("#logoguiones").hover(function(){$("#logoguiones"),
-      gsap.from('#logoguiones', { duration: 2, ease: "elastic.out(2, 0.1)", y: -10 }); }, 
-      function(){$("logoguiones"),
-      gsap.set('logoguiones', { duration: 2, ease: "elastic.out(2, 0.1)", y: -10 });
-      });});
-
-      $(document).ready(function(){
-      $("#logo2d").hover(function(){$("#logo2d"),
-      gsap.from('#logo2d', { duration: 3, ease: "elastic.out(2, 0.1)", y: -10 }); }, 
-      function(){$("#logo2d"),
-      gsap.set('#logo2d', { duration: 3, ease: "elastic.out(2, 0.1)", y: -10 });
-      });});  
-
-      $(document).ready(function(){
-      $("#logoaudio").hover(function(){$("#logoaudio"),
-      gsap.from('#logoaudio', { duration: 1, ease: "elastic.out(2, 0.1)", y: -10 }); }, 
-      function(){$("#logoaudio"),
-      gsap.set('#logoaudio', { duration: 1, ease: "elastic.out(2, 0.1)", y: -10 });
-      });});  
-
-      $(document).ready(function(){
-      $("#logoprogramacion").hover(function(){$("#logoprogramacion"),
-      gsap.from('#logoprogramacion', { duration: 2, ease: "elastic.out(2, 0.1)", y: -10 }); }, 
-      function(){$("#logoprogramacion"),
-      gsap.set('#logoprogramacion', { duration: 2, ease: "elastic.out(2, 0.1)", y: -10 });
-      });});  
-
-      $(document).ready(function(){
-      $("#logorealidad").hover(function(){$("#logorealidad"),
-      gsap.from('#logorealidad', { duration: 2, ease: "elastic.out(2, 0.1)", y: -10 }); }, 
-      function(){$("#logorealidad"),
-      gsap.set('#logorealidad', { duration: 2, ease: "elastic.out(2, 0.1)", y: -10 });
-      });});  
-    </script>
+    
