--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,16 +1,12 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
 
     <app-menu> </app-menu>
-    <a class="navbar-brand" href="\">Foro Multimedia</a>
+    
 
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/">Home</a>
-       </li>
-      </ul>
+    <div class="d-flex justify-content-end" id="navbarColor01">
+      
       <ul class="navbar-nav mx-auto " *ngIf="user$ | async as user; else login">
         <li class="nav-item " *ngIf = "!user">
           <a class="nav-link" routerLink="/login">Login</a>
@@ -29,7 +25,7 @@
        </li>
       </ul>
 
-      <ng-template #login>
+      <ng-template #login >
         <ul class="navbar-nav mx-auto">
           <li class="nav-item ">
             <a class="nav-link" routerLink="/login">Login</a>
@@ -37,7 +33,7 @@
 
          <li class="nav-item ">
           <a class="nav-link" routerLink="/register">Register</a>
-       </li>
+         </li>
         </ul>
       </ng-template>
 
