--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,30 +1,39 @@
-<p>login works!</p>
+
+
 
 <div class="row">
-    <div class="col-md-6 mx-auto mt-5">
-        <div class="card">
-            <div class="card-body">
+
+    <div class="col-12 mx-auto mt-5 ">
+        <div class="card colorcuadro">
+            <div class="card-body ">
                 <h1 class="text-center">Login</h1>
-                <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+                <form  [formGroup]="loginForm" (ngSubmit)="onLogin()">
 
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" formControlName="email">
+                    <div class="form-group colorblanco d-flex justify-content-center mt-5 col-8">
+                        <input type="email" class="form-control form-control-lg col-11" aria-label="email"
+                         placeholder="Correo" formControlName="email">
                     </div>
 
-                    <div class="form-group">
-                        <label for="email">Constraseña</label>
-                        <input type="password" class="form-control" formControlName="password">
+                    <div class="form-group colorblanco d-flex justify-content-center mt-3 col-8">
+                        <input type="password" class="form-control form-control-lg col-11" aria-label="password"
+                        placeholder="Constraseña" formControlName="password">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
+
+                    <div class="row d-flex justify-content-center mb-5 mt-5">
+                        <button type="submit" class="btn btn-primary col-2 mx-5">Ingresar</button>
+                        <a class= "btn btn-primary col-2 mx-5" [routerLink]="['/register']">Registro</a>
+                    </div>
+
+                    <div class="row d-flex justify-content-center">
+                        <button (click)="onGoogleLogin()" class="btn btn-light col-2 "> <img src="https://img.icons8.com/color/16/000000/google-logo.png"> LOGIN CON GOOGLE</button>
+                    </div>
+
+                   
+                    
+
                 </form>
 
-                <div class="row col-12 d-flex justify-content-center">
-                    <div class="form-group mt-3 col-12">
-                        <button (click)="onGoogleLogin()" class="btn btn-lg btn-block">LOGIN CON GOOGLE</button>
-                    </div>
-                </div>
-
+            
                 <div class="row col-12 d-flex justify-content-center">
                     <div class=" mt-3">
                         <p> ¿No tienes cuenta? <a [routerLink]="['/register']">Registro</a></p>
